<resources>
    <string name="app_name">WithPressoOwner</string>
    <string name="title">WithPresso For Owner</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="log_in">로그인</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">회원가입</string>
    <string name="pw_check">비밀번호 재확인</string>
    <string name="busi_num">사업자 번호</string>
    <string name="cafe_name">카페 이름</string>
    <string name="id_verbose">아이디를 입력해주세요</string>
    <string name="pw_verbose">비밀번호를 입력해주세요</string>
    <string name="pw_check_verbose">비밀번호를 다시 입력해주세요</string>
    <string name="busi_num_verbose">-를 포함한 사업자 번호를 입력해주세요</string>
    <string name="cafe_name_verbose">카페 이름을 입력해주세요</string>
    <string name="basic_info_title">카페 기본 정보</string>
    <string name="cafe_addr">카페 주소</string>
    <string name="cafe_addr_verbose">카페 주소를 입력해주세요</string>
    <string name="oper_hour">운영 시간</string>
    <string name="oper_hour_verbose">예) 11:00 ~ 22:00</string>
    <string name="cafe_tel">전화 번호</string>
    <string name="cafe_tel_verbose">예) 02-820-1234</string>
    <string name="menu_verbose">예) 아이스 아메리카노: 4,000원</string>
    <string name="menu">메뉴</string>
    <string name="detail_info">카페 세부 정보</string>
    <string name="table">책상</string>
    <string name="table_num_and_size">책상 개수와 크기를 알려주세요</string>
    <string name="single_table">1인석: </string>
    <string name="couple_seat">2인석: </string>
    <string name="quad_seat">4인석: </string>
    <string name="multi_seat">다인석: </string>
    <string name="table_size">(2인석 기준) A4:</string>
    <string name="chair_cushion_and_back">의자 쿠션감과 등받이 유무를 알려주세요</string>
    <string name="cushion">쿠션감: </string>
    <string name="chair_back">등받이: </string>
    <string name="chair_back_true">있어요</string>
    <string name="chair_back_no">없어요</string>
    <string name="total_num_outlet">전체 콘센트 개수를 알려주세요</string>
    <string name="num_outlet">개수: </string>
    <string name="genre">장르:</string>
    <string name="cafe_music_genre">매장 음악 장르를 알려주세요</string>
    <string name="restroom_loc_and_gender">화장실 위치와 성별 분리 여부를 알려주세요</string>
    <string name="restroom_loc">위치: </string>
    <string name="restroom_in">카페 안에 있어요</string>
    <string name="gender_sep">성별 분리:</string>
    <string name="smoking_room_loc">유무:</string>
    <string name="smoking_room_in">있어요</string>
    <string name="smoking_room_out">없어요</string>
    <string name="date">날짜:</string>
    <string name="owner_name">사장님 성함</string>
    <string name="owner_name_verbose">사장님 성함을 입력해주세요</string>
    <string name="dup_check">중복 체크</string>
    <string name="discount_verbose">재주문 시 할인율을 알려주세요</string>
    <string name="discount">할인율:</string>
    <string name="cushion_example">예) 쿠션이 없어서 딱딱해요</string>
    <string name="anti_corona_example">예) 2020.11.14</string>
    <string name="restroom_out">카페 외부에 있어요</string>
    <string name="gen_sep_yes">분리돼 있어요</string>
    <string name="gen_sep_no">합쳐져 있어요</string>
    <string name="cafe_info_manage">카페 정보 관리</string>
    <string name="modify">정보 수정</string>
    <string name="change_reflect">변경 내용 저장</string>
    <string name="search">검색하기</string>
    <string name="add_photo">카페 사진 추가</string>
    <string name="menu_name">메뉴 이름</string>
    <string name="send_check_msg">리뷰 코드 보내기</string>
    <string name="table_information">Table information</string>
    <string name="use_coupon">쿠폰 사용하기</string>
    <string name="enter_coupon_code">쿠폰 코드를 입력해주세요</string>
    <string name="congestion_level">혼잡도:</string>
    <string name="num_of_customer">매장 내 손님 수:</string>
    <string name="review_comment">리뷰 내용</string>
    <string name="review_point">리뷰 점수:</string>
    <string name="total_num_of_review">전체 리뷰 개수:</string>
    <string name="customer_review">손님 리뷰</string>
    <string name="nickname">닉네임</string>
    <string name="review">리뷰 보기</string>
    <string name="plenty">여유</string>
    <string name="normal">보통</string>
    <string name="congestion">혼잡</string>
</resources>