<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/basic_info_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.example.withpressoowner.fragment.BasicInfoFragment">

    <!-- title -->
    <TextView
        android:id="@+id/basic_info_title_text"
        style="@style/sign_up_title"
        android:text="@string/basic_info_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/basic_info_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <!-- cafe name -->
            <TextView
                android:id="@+id/basic_info_cafe_name_text"
                style="@style/sign_up_text"
                android:layout_marginTop="30dp"
                android:text="@string/cafe_name" />

            <EditText
                android:id="@+id/basic_info_cafe_name_edit"
                style="@style/sign_up_edit"
                android:hint="@string/cafe_name_verbose"
                android:inputType="text" />

            <!-- cafe address -->
            <TextView
                android:id="@+id/basic_info_cafe_addr_text"
                style="@style/sign_up_text"
                android:layout_marginTop="30dp"
                android:text="@string/cafe_addr" />

            <!-- 운영 시간 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <EditText
                    android:id="@+id/basic_info_cafe_addr_edit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7.5"
                    android:enabled="false"
                    android:hint="@string/cafe_addr_verbose"
                    android:inputType="text" />

                <Button
                    android:id="@+id/basic_info_cafe_addr_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="2.5"
                    android:background="@drawable/log_in_button"
                    android:text="@string/search" />

            </LinearLayout>

            <TextView
                android:id="@+id/basic_info_hour_text"
                style="@style/sign_up_text"
                android:text="@string/oper_hour" />

            <EditText
                android:id="@+id/basic_info_hour_edit"
                style="@style/sign_up_edit"
                android:hint="@string/oper_hour_verbose"
                android:inputType="text" />

            <!-- 카페 전화 번호 -->
            <TextView
                android:id="@+id/basic_info_tel_text"
                style="@style/sign_up_text"
                android:text="@string/cafe_tel" />

            <EditText
                android:id="@+id/basic_info_tel_edit"
                style="@style/sign_up_edit"
                android:hint="@string/cafe_tel_verbose"
                android:inputType="phone" />

            <!-- 메뉴 -->
            <TextView
                android:id="@+id/basic_info_menu_text"
                style="@style/sign_up_text"
                android:text="@string/menu"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/basic_info_menu_edit"
                style="@style/sign_up_edit"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/menu_verbose"
                android:inputType="textMultiLine"
                android:lines="6"
                android:maxLines="8"
                android:minLines="6"
                android:scrollbars="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/basic_info_prev_image"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/prev" />

                <ImageView
                    android:id="@+id/basic_info_next_image"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/next" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>