<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_info2_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.example.withpressoowner.fragment.DetailInfoSecFragment">

    <!-- title -->
    <TextView
        android:id="@+id/detail_info2_title_text"
        style="@style/sign_up_title"
        android:layout_width="373dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/detail_info" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/detail_info2_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <!-- 화장실 -->
            <TextView
                android:id="@+id/detail_info2_restroom_text"
                style="@style/sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/restroom_loc_and_gender" />

            <LinearLayout
                android:id="@+id/detail_info2_restroom_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_info2_rest_inout_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/restroom_loc" />

                <RadioGroup
                    android:id="@+id/detail_info2_rest_loc_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- 있어요 -->
                    <RadioButton
                        android:id="@+id/detail_info2_rest_in_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/restroom_in"/>

                    <!-- 없어요 -->
                    <RadioButton
                        android:id="@+id/detail_info2_rest_out_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/restroom_out"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_info2_restroom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_info2_rest_gen_sep_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/gender_sep" />

                <RadioGroup
                    android:id="@+id/detail_info2_rest_gen_sep_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- 있어요 -->
                    <RadioButton
                        android:id="@+id/detail_info2_gen_sep_yes_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/gen_sep_yes" />

                    <!-- 없어요 -->
                    <RadioButton
                        android:id="@+id/detail_info2_gen_sep_no_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/gen_sep_no"/>
                </RadioGroup>
            </LinearLayout>


            <!-- 흡연실 -->
            <TextView
                android:id="@+id/detail_info2_smoking_room_text"
                style="@style/sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="흡연실 유무를 알려주세요" />

            <LinearLayout
                android:id="@+id/detail_info2_smoking_room_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_info2_smoking_room_inout_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/smoking_room_loc" />

                <RadioGroup
                    android:id="@+id/detail_info2_smoking_room_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- 있어요 -->
                    <RadioButton
                        android:id="@+id/detail_info2_smoking_room_in_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/smoking_room_in"/>

                    <!-- 없어요 -->
                    <RadioButton
                        android:id="@+id/detail_info2_smoking_room_out_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/smoking_room_out" />
                </RadioGroup>
            </LinearLayout>

            <!-- 최근 방역 날짜  -->
            <TextView
                android:id="@+id/detail_info2_anti_corona_text"
                style="@style/sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="최근 방역 날짜를 알려주세요" />

            <LinearLayout
                android:id="@+id/detail_info2_anti_corona_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_info2_anti_corona_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:text="@string/date" />

                <EditText
                    android:id="@+id/detail_info2_anti_corona_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/anti_corona_example"
                    android:ems="16"
                    android:inputType="text" />

            </LinearLayout>

            <!-- 할인율 -->
            <TextView
                android:id="@+id/detail_info2_discount_text"
                style="@style/sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/discount_verbose" />

            <LinearLayout
                android:id="@+id/detail_info2_discount_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_info2_discount_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:text="@string/discount" />

                <EditText
                    android:id="@+id/detail_info2_discount_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/detail_info2_prev_image"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/prev" />

                <ImageView
                    android:id="@+id/detail_info2_next_image"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/next" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>