<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ReviewFragment">

    <!-- title -->
    <TextView
        android:id="@+id/detail_info_title_text"
        style="@style/sign_up_title"
        android:text="@string/customer_review" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/comment_rating_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RatingBar
                android:id="@+id/total_ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/review_mean_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/review_point"
                app:layout_constraintEnd_toEndOf="@+id/total_ratingBar"
                app:layout_constraintStart_toStartOf="@+id/total_ratingBar"
                app:layout_constraintTop_toBottomOf="@+id/total_ratingBar" />

            <TextView
                android:id="@+id/total_num_of_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/total_num_of_review"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/review_mean_point"
                app:layout_constraintStart_toStartOf="@+id/review_mean_point"
                app:layout_constraintTop_toBottomOf="@id/review_mean_point" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comment_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>